styled add user

--- a/src/components/MainSection.module.css
+++ b/src/components/MainSection.module.css
@@ -4,27 +4,20 @@
     justify-content: center;
 }
 
-.linkStyled {
-    text-decoration: none;
-    color: #1652F0;
-    margin-left: 10px;
+table {
+    border-collapse: collapse;
 }
 
-.listContainer {
-    display: flex;
-    flex-flow: column;
-    list-style-type: decimal-leading-zero;
+.tableHeader {
+    background-color: black;
+    color: white;
 }
 
-.listContainer li {
-    padding: 0.5rem;
-    border-radius: 4px;
+td, th {
+    text-align: left;
+    padding: 18px;
 }
 
-.listContainer li:nth-child(2n) {
-    background-color: #a3bdcb;
-}
-
-.iconsContainer i {
-    font-size: 2rem;
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
