--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,14 +1,4 @@
 .buttonStyled {
-    cursor: pointer;
-    background-color: #1652F0;
-    color: white;
-    border: 1px solid #1652F0;
-    border-radius: 5px;
-}
-
-.buttonStyled:hover {
-    background-color: #0A46E4;
-    border-color: #0A46E4;
-    transition: ease-in 0.3s;
-    color: #a3bdcb;
+    border: none;
+    background-color: white;
 }
