--- a/src/components/TableItems.module.css
+++ b/src/components/TableItems.module.css
@@ -1,12 +1,11 @@
 .iconContainer {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .iconContainer i {
-    font-size: 20px;
+    font-size: 30px;
     color: black;
-    background-color: white;
     cursor: pointer;
     border-radius: 4px;
 }
@@ -27,7 +26,4 @@
     margin-left: 10px;
 }
 
-.links {
-
-}
 
